tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillSlimeB-AAAAAAAAAAAAAAAAAAALHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2844,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Slime Beetle can be found in Hollow Hills, and Labyrinths. Slime Beetles fire slimy projectiles at players that deal about 8 points of damage on attack. They have incredible accuracy, and move extremely quickly when the player attempts to approach one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Slime Beetle)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
