tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillStray-z6Xaal6yTVi4fqEFCChoGg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6823601425909049370,
  "prerequisites": [
    11
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Stray is a variety of Skeleton you will find in colder biomes. Watch out for their arrows; they can have a slowness effect!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Stray)",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11
  ],
  "rewards": [],
  "tasks": []
}
