tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__KillAlltheThings-AAAAAAAAAAAAAAAAAAAAJQ==__TimetoKillWisp-AAAAAAAAAAAAAAAAAAALJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2852,
  "prerequisites": [
    11
  ],
  "properties": {
    "auto_claim": false,
    "desc": "They appear everywhere in the Nether, and there are wisp spawners as well. Since they are very fast and small, it gets difficult in long-range combat.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Time to Kill (Wisp)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 432000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11
  ],
  "rewards": [],
  "tasks": []
}
